--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,12 @@
         <form id="image-form">
           <h1>Describe An Image</h1>
           <div class="form-control">
-            <input type="text" id="prompt" name="prompt" placeholder="Enter Text" />
+            <input
+              type="text"
+              id="prompt"
+              name="prompt"
+              placeholder="Enter Text"
+            />
           </div>
           <!-- size -->
           <div class="form-control">
@@ -24,7 +29,7 @@
               <option value="large">Large</option>
             </select>
           </div>
-          <button type="submit" id="submitbutton"  class="btn">Generate</button>
+          <button type="submit" id="submitbutton" class="btn">Generate</button>
         </form>
       </section>
 
